fix minor layout issue in visualization focus

--- a/src/components/VisualizationFocus/VisualizationFocus.scss
+++ b/src/components/VisualizationFocus/VisualizationFocus.scss
@@ -100,8 +100,8 @@
       padding: 0;
       .VisualizationController {
         // padding: $small-gutter;
-        padding-bottom: $medium-gutter;
-        padding-top: $medium-gutter;
+        padding-bottom: 0;//$medium-gutter;
+        padding-top: 0;//$medium-gutter;
         padding-right: $medium-gutter;
         box-sizing: border-box;
         position: relative;
